# local-mind

./: .env.example  .gitignore  README.md  context_checkpoint.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  database.py  dependencies.py  main.py
app/api/: chat.py  collections.py  documents.py  health.py  openai_compat.py  research.py  retrieval.py
app/components/: __init__.py  contracts.py
app/ingestion/: chunker.py  worker.py
app/middleware/: auth.py  request_logging.py
app/models/: __init__.py  chat.py  collection.py  document.py  health.py  openai.py  research.py  retrieval.py
app/services/: citation_validator.py  embedding_service.py  google_embedding_service.py  google_llm_client.py  hybrid_retriever.py  lexical_search.py  llm_client.py  mistral_embedding_service.py  mistral_llm_client.py  query_rewriter.py  rag_service.py  reranker.py  research_service.py  retrieval_engine.py  vector_store.py
app/utils/: file_utils.py
docs/: api.md  architecture.md  development.md
scripts/: check_google_ai.py  check_mistral.py  check_ollama.py  init_db.py  migrate_db.py  view_data.py
tests/integration/: conftest.py  test_chat_api.py  test_collections_api.py  test_delete_cleanup_api.py  test_health_api.py  test_research_api.py  test_retrieval_api.py  test_security_hardening_api.py  test_upload_api.py
tests/unit/: test_chunker.py  test_citation_validator.py  test_collection_repo.py  test_database_migrations.py  test_file_utils.py  test_ingestion_worker.py  (+6 more)
ui/: index.html  package-lock.json  package.json
(+24 files in other folders)
