[project]
name = "localmind"
version = "0.1.0"
description = "Local private document Q&A with FastAPI, Ollama, and ChromaDB"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
